[gd_scene load_steps=19 format=3 uid="uid://cr7oqsi6kn80o"]

[ext_resource type="Script" path="res://titlescreen/title_screen.gd" id="1_o5jyc"]
[ext_resource type="Texture2D" uid="uid://ccnptkb1s7tlv" path="res://art/titlescreen/Start button ganti font.png" id="2_fggmy"]
[ext_resource type="Texture2D" uid="uid://damfshlkw1snm" path="res://art/titlescreen/Setting button ganti font.png" id="3_lqe53"]
[ext_resource type="Texture2D" uid="uid://c84r2nv44nr80" path="res://art/titlescreen/Exit button ganti font.png" id="4_gaoie"]
[ext_resource type="Texture2D" uid="uid://cgdhqo1ik4g3k" path="res://art/titlescreen/fishery dream logo.png" id="5_7exht"]
[ext_resource type="Texture2D" uid="uid://dt1ldyuwlf0ty" path="res://art/titlescreen/title screen.png" id="6_n1ll6"]
[ext_resource type="Texture2D" uid="uid://dcpja6qu1scp6" path="res://art/titlescreen/Logo Perusahaan@4x.png" id="7_k75t0"]
[ext_resource type="PackedScene" uid="uid://c6t7smfxnhx7n" path="res://titlescreen/settings_menu.tscn" id="7_n5oyb"]
[ext_resource type="AudioStream" uid="uid://bhdjotcdm26vh" path="res://music/splash_final.mp3" id="9_av6h4"]
[ext_resource type="AudioStream" uid="uid://dhdom2tyn2dsp" path="res://music/menu_loop_final.mp3" id="10_6ilp1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x0dwa"]
atlas = ExtResource("6_n1ll6")
region = Rect2(0, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgod5"]
atlas = ExtResource("6_n1ll6")
region = Rect2(240, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rkxi"]
atlas = ExtResource("6_n1ll6")
region = Rect2(480, 0, 240, 135)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2fay"]
atlas = ExtResource("6_n1ll6")
region = Rect2(720, 0, 240, 135)

[sub_resource type="SpriteFrames" id="SpriteFrames_angk1"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_x0dwa")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_rgod5")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_0rkxi")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_d2fay")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_2pkvr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer2/Control/logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hhpyw"]
resource_name = "logo"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../CanvasLayer2/Control/logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3.7, 5.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b66fk"]
_data = {
"RESET": SubResource("Animation_2pkvr"),
"logo": SubResource("Animation_hhpyw")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_o5jyc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="StartBtn" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.0
offset_right = 29.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/StartBtn"]
position = Vector2(29, 11)
texture = ExtResource("2_fggmy")

[node name="SettingsBtn" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 20.0
offset_right = 29.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/SettingsBtn"]
position = Vector2(29, 11)
texture = ExtResource("3_lqe53")
metadata/_edit_lock_ = true

[node name="ExitBtn" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 52.0
offset_right = 29.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ExitBtn"]
position = Vector2(29, 11)
texture = ExtResource("4_gaoie")
metadata/_edit_lock_ = true

[node name="Logo" type="Panel" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.5
offset_top = 6.0
offset_right = 60.5
offset_bottom = 73.0
grow_horizontal = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Logo"]
position = Vector2(59, 34)
scale = Vector2(0.85, 0.85)
texture = ExtResource("5_7exht")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/CanvasLayer"]
position = Vector2(167.974, 95.25)
scale = Vector2(1.3966, 1.4037)
sprite_frames = SubResource("SpriteFrames_angk1")
frame_progress = 0.470048

[node name="SettingsMenu" parent="CanvasLayer" instance=ExtResource("7_n5oyb")]
visible = false
anchors_preset = 8
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 0.0
offset_bottom = 0.0
scale = Vector2(0.735, 0.735)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2/Control"]
root_node = NodePath("../../../CanvasLayer")
libraries = {
"": SubResource("AnimationLibrary_b66fk")
}

[node name="logo" type="Sprite2D" parent="CanvasLayer2/Control"]
modulate = Color(1, 1, 1, 0)
z_index = 1
scale = Vector2(0.078, 0.078)
texture = ExtResource("7_k75t0")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2/Control"]
layout_mode = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 970.0
offset_bottom = 553.0

[node name="Splash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_av6h4")

[node name="TitleScreen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_6ilp1")

[connection signal="backTo" from="CanvasLayer/SettingsMenu" to="." method="_on_settings_menu_back_to"]
